# beshfuck

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: constants.bf  e.bf  million.bef
include/: compiler.h  interpreter.h  interpreter_repl.h  lexer.h  map.h  vm.h  vm_bytecode.h  vm_constants.h  vm_debug.h  vm_procedure.h  vm_procedures.h
src/: compiler.c  interpreter.c  interpreter_repl.c  lexer.c  main.c  map.c  vm.c  vm_bytecode.c  vm_constants.c  vm_debug.c  vm_procedure.c  vm_procedures.c
